--- a/Wiki_Movies.ipynb
+++ b/Wiki_Movies.ipynb
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b8c1e125",
+   "id": "10db76e5",
    "metadata": {},
    "outputs": [
     {
@@ -3667,7 +3667,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "473e9abd",
+   "id": "95573dc5",
    "metadata": {},
    "outputs": [
     {
@@ -3843,7 +3843,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "2ce5d6c8",
+   "id": "52b5fdb5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3854,7 +3854,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "f8109a83",
+   "id": "a2d3712c",
    "metadata": {},
    "outputs": [
     {
@@ -3878,7 +3878,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "5716c516",
+   "id": "aea89ebd",
    "metadata": {},
    "outputs": [
     {
@@ -3911,7 +3911,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "824bc733",
+   "id": "49d376c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3922,7 +3922,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "85b4655c",
+   "id": "d70af97d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3935,7 +3935,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "87a8f526",
+   "id": "84cbda47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3946,7 +3946,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "1501a0d8",
+   "id": "3e61b7e1",
    "metadata": {},
    "outputs": [
     {
@@ -3983,7 +3983,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "1b3dc1cf",
+   "id": "374430cd",
    "metadata": {},
    "outputs": [
     {
@@ -4016,7 +4016,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "ece3e937",
+   "id": "3ea92a7c",
    "metadata": {},
    "outputs": [
     {
@@ -4050,7 +4050,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "0ac1355f",
+   "id": "e530dc77",
    "metadata": {},
    "outputs": [
     {
@@ -4709,7 +4709,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "df80de3a",
+   "id": "e045dd54",
    "metadata": {},
    "outputs": [
     {
@@ -4840,7 +4840,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "75bd577c",
+   "id": "67817cb7",
    "metadata": {},
    "outputs": [
     {
@@ -4914,7 +4914,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "3cd53abb",
+   "id": "610afea3",
    "metadata": {},
    "outputs": [
     {
@@ -4948,7 +4948,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "ad150999",
+   "id": "cf17b701",
    "metadata": {},
    "outputs": [
     {
@@ -4982,7 +4982,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "34ebf411",
+   "id": "15497840",
    "metadata": {},
    "outputs": [
     {
@@ -5016,7 +5016,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "7f17a308",
+   "id": "6dcfc7ea",
    "metadata": {},
    "outputs": [
     {
@@ -5050,7 +5050,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "7240579b",
+   "id": "613810ac",
    "metadata": {},
    "outputs": [
     {
@@ -5084,7 +5084,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "0bd4fa86",
+   "id": "f15b37a6",
    "metadata": {},
    "outputs": [
     {
@@ -5202,7 +5202,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "9a9ddec8",
+   "id": "4e22b63c",
    "metadata": {},
    "outputs": [
     {
@@ -5224,7 +5224,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "5add1acd",
+   "id": "79465918",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5235,7 +5235,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "291fd249",
+   "id": "08552cfc",
    "metadata": {},
    "outputs": [
     {
@@ -5699,7 +5699,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "221eeaaa",
+   "id": "093b793f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5709,7 +5709,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "f4825c5d",
+   "id": "b09565cc",
    "metadata": {},
    "outputs": [
     {
@@ -5744,7 +5744,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "b83f7c9f",
+   "id": "2daf282d",
    "metadata": {},
    "outputs": [
     {
@@ -5784,7 +5784,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "e02c0c4a",
+   "id": "5ce2f81f",
    "metadata": {},
    "outputs": [
     {
@@ -5916,7 +5916,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "576e46b3",
+   "id": "b40805c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5929,7 +5929,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "4d0f07e7",
+   "id": "094e12d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5944,7 +5944,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "ccbae1b1",
+   "id": "ca7e2380",
    "metadata": {},
    "outputs": [
     {
@@ -6437,7 +6437,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "4637e273",
+   "id": "d2fc20d2",
    "metadata": {},
    "outputs": [
     {
@@ -6460,7 +6460,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "9477f275",
+   "id": "29a20f08",
    "metadata": {},
    "outputs": [
     {
@@ -6482,7 +6482,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "80a9e9f8",
+   "id": "c4de1b57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6498,7 +6498,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "633f81d0",
+   "id": "be861e0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6523,8 +6523,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 115,
+   "id": "f5f05007",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# grouping the movie ids and ratings and renaming the UserID col\n",
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count() \\\n",
+    "                .rename({'userId':'count'}, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "e856b96c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# adding movieID as the index\n",
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count() \\\n",
+    "                .rename({'userId':'count'}, axis=1) \\\n",
+    "                .pivot(index='movieId',columns='rating', values='count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "8ae40144",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# prepend rating_ to each col\n",
+    "rating_counts.columns = ['rating_' + str(col) for col in rating_counts.columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "4289dd19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# using left merge to add kaggle_id\n",
+    "movies_with_ratings_df = pd.merge(movies_df, rating_counts, left_on='kaggle_id', right_index=True, how='left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "d1b27797",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fill in zeroes\n",
+    "movies_with_ratings_df[rating_counts.columns] = movies_with_ratings_df[rating_counts.columns].fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "70093d53",
+   "id": "a252c4ee",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -6532,7 +6590,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0161b774",
+   "id": "9fd3a944",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -6540,7 +6598,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c37cb7e2",
+   "id": "91a4bf1b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "099820cb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f297d16e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9265a11",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51156ed8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74fc34d2",
    "metadata": {},
    "outputs": [],
    "source": []
