data to pgAdmin

--- a/Wiki_Movies.ipynb
+++ b/Wiki_Movies.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 123,
    "id": "7183a927",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,8 @@
     "import numpy as np\n",
     "import re\n",
     "from sqlalchemy import create_engine\n",
-    "from config import db_password"
+    "from config import db_password\n",
+    "import time"
    ]
   },
   {
@@ -33,6 +34,14 @@
     "with open ('wikipedia-movies.json', mode='r') as file:\n",
     "    wiki_movies_raw = json.load(file)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a58e3ee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -6591,12 +6600,79 @@
    "id": "00f8dfa9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Do not run this yet!\n",
+    "# for data in pd.read_csv(f'{file_dir}ratings.csv', chunksize=1000000):\n",
+    "#     data.to_sql(name='ratings', con=engine, if_exists='append')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bafe5d1",
+   "id": "98aaef8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 8.5.1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "46ba49eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "importing rows 0 to 1000000...Done. 42.90499782562256 total seconds elapsed\n",
+      "importing rows 1000000 to 2000000...Done. 114.84229874610901 total seconds elapsed\n",
+      "importing rows 2000000 to 3000000...Done. 255.63766622543335 total seconds elapsed\n",
+      "importing rows 3000000 to 4000000...Done. 303.7575933933258 total seconds elapsed\n",
+      "importing rows 4000000 to 5000000...Done. 344.96401166915894 total seconds elapsed\n",
+      "importing rows 5000000 to 6000000...Done. 385.9751605987549 total seconds elapsed\n",
+      "importing rows 6000000 to 7000000...Done. 428.14634466171265 total seconds elapsed\n",
+      "importing rows 7000000 to 8000000...Done. 466.069552898407 total seconds elapsed\n",
+      "importing rows 8000000 to 9000000...Done. 502.95522475242615 total seconds elapsed\n",
+      "importing rows 9000000 to 10000000...Done. 541.6761004924774 total seconds elapsed\n",
+      "importing rows 10000000 to 11000000...Done. 580.4736533164978 total seconds elapsed\n",
+      "importing rows 11000000 to 12000000...Done. 615.6938388347626 total seconds elapsed\n",
+      "importing rows 12000000 to 13000000...Done. 651.1922569274902 total seconds elapsed\n",
+      "importing rows 13000000 to 14000000...Done. 689.0103254318237 total seconds elapsed\n",
+      "importing rows 14000000 to 15000000...Done. 725.4014203548431 total seconds elapsed\n",
+      "importing rows 15000000 to 16000000...Done. 758.2577984333038 total seconds elapsed\n",
+      "importing rows 16000000 to 17000000...Done. 795.7733314037323 total seconds elapsed\n",
+      "importing rows 17000000 to 18000000...Done. 827.970650434494 total seconds elapsed\n",
+      "importing rows 18000000 to 19000000...Done. 861.5917279720306 total seconds elapsed\n",
+      "importing rows 19000000 to 20000000...Done. 898.9724898338318 total seconds elapsed\n",
+      "importing rows 20000000 to 21000000...Done. 934.6992580890656 total seconds elapsed\n",
+      "importing rows 21000000 to 22000000...Done. 969.3639929294586 total seconds elapsed\n",
+      "importing rows 22000000 to 23000000...Done. 1002.4102277755737 total seconds elapsed\n",
+      "importing rows 23000000 to 24000000...Done. 1039.977444410324 total seconds elapsed\n",
+      "importing rows 24000000 to 25000000...Done. 1075.9412260055542 total seconds elapsed\n",
+      "importing rows 25000000 to 26000000...Done. 1112.653345823288 total seconds elapsed\n",
+      "importing rows 26000000 to 26024289...Done. 1113.5143625736237 total seconds elapsed\n"
+     ]
+    }
+   ],
+   "source": [
+    "rows_imported = 0\n",
+    "# get the start_time from time.time()\n",
+    "start_time = time.time()\n",
+    "for data in pd.read_csv('ratings.csv', chunksize=1000000):\n",
+    "    print(f'importing rows {rows_imported} to {rows_imported + len(data)}...', end='')\n",
+    "    data.to_sql(name='ratings', con=engine, if_exists='append')\n",
+    "    rows_imported += len(data)\n",
+    "\n",
+    "    # add elapsed time to final print out\n",
+    "    print(f'Done. {time.time() - start_time} total seconds elapsed')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d167301",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -6604,7 +6680,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29db1968",
+   "id": "1e2191d0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2131a633",
    "metadata": {},
    "outputs": [],
    "source": []
