--- a/Wiki_Movies.ipynb
+++ b/Wiki_Movies.ipynb
@@ -3240,7 +3240,7 @@
    ],
    "source": [
     "# finding format of remaining running times\n",
-    "running_time[running_time.str.contains(r'^\\d*\\s*minutes$', flags=re.IGNORECASE, na=False) != True]"
+    "running_time.str.contains(r'^\\d*\\s*minutes$', flags=re.IGNORECASE, na=False).sum()"
    ]
   },
   {
